# second-handed-strollers-price-predict-project-mldl

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
csv/: bungaejangter_clean.csv  daangn_clean.csv  data_0825.csv  data_0826.csv  data_0829.csv  data_08291122.csv  data_08291455.csv  data_0829_2.csv  data_regression_clean.csv  naver_clean.csv
sample_data/raw/: sampledata.csv
src/: bungaejangter_item_crawlling.ipynb
src/app/: st.py  stroller_price_predictor.py
src/bungaejangter/: bungaejangter_item_crawlling.ipynb  image_util.py  item_crawler.py
src/crawling/: bungaejangter_item_crawling.ipynb  bungaejangter_item_crawling.py  daangn_stroller_crawler.ipynb  detail_links_test.json  dong-number.txt  links_by_search_url.json  naver_cafe_item_crawling.ipynb
src/preprocessed/: bungaejangter_preprocessed.ipynb  city_key_donglist_value.json  cleaned_naver.csv  daangn_preprocessed_condition.ipynb  daangn_preprocessed_model.ipynb  daangn_preprocessed_test.ipynb  image_preprocessed.ipynb  merge.ipynb  naver_preprocessed.ipynb  region.json
src/spec/: data.py
src/tools/: bungaejangter_item_crawler.py  file_util.py
src/training/: stroller_model_regression.ipynb  stroller_model_regression_clean.ipynb  stroller_price_regression_clean.ipynb  stroller_price_regression_clean_convnext.ipynb  stroller_price_regression_clean_convnext_tuning.ipynb  stroller_price_regression_clean_effiientnet.ipynb  stroller_price_regression_clean_resnet.ipynb  stroller_price_regression_clean_transfer.ipynb  stroller_price_regression_ref.ipynb  stroller_price_regression_visualization.ipynb  stroller_price_regression_with_pic.ipynb  transter_learning_ref.ipynb
tools/: date_util.py
(+7 files in other folders)
