[project]
name = "secondhanded-strollers-predictedprice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.5",
    "numpy>=2.2.6",
    "pandas>=2.3.1",
    "requests>=2.32.5",
    "selenium>=4.35.0",
    "functions-framework>=3.9.2",
    "webdriver-manager>=4.0.2",
    "koreanize-matplotlib>=0.1.1",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]
