[project]
name = "secondhanded-strollers-predictedprice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.5",
    "numpy>=2.2.6",
    "pandas>=2.3.1",
    "requests>=2.32.5",
    "selenium>=4.35.0",
    "functions-framework>=3.9.2",
    "webdriver-manager>=4.0.2",
    "koreanize-matplotlib>=0.1.1",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "scikit-learn>=1.7.1",
    "lazypredict>=0.2.16",
    "lightgbm>=4.6.0",
    "tensorboard>=2.20.0",
    "tensorboardx>=2.6.4",
    "grad-cam>=1.5.5",
]
